unpackaged/main/default/objects/POS_Solution__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Code</label>
    <type>Text</type>
</CustomField>