unpackaged/main/default/objects/POS_Solution__c/fields/Primary_DNS__c.field-meta.xml
<CustomField>
    <fullName>Primary_DNS__c</fullName>
    <label>Primary DNS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>