unpackaged/main/default/objects/POS_Solution__c/fields/Print_Return_Label__c.field-meta.xml
<CustomField>
    <fullName>Print_Return_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Return Label</label>
    <type>Checkbox</type>
</CustomField>