unpackaged/main/default/objects/POS_Solution__c/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <label>Printer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Epson TM M30 Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 I (T80)</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 II (T80)</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 III Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T88</fullName>
            </value>
            <value>
                <fullName>Epson TM T88IV (T80)</fullName>
            </value>
            <value>
                <fullName>Epson TM T88V (T80)</fullName>
            </value>
            <value>
                <fullName>Epson TM U295 (Impact)</fullName>
            </value>
            <value>
                <fullName>Laserpro P1102W</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>STAR TSP 700 Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>