unpackaged/main/default/objects/POS_Solution__c/fields/Printing_Format__c.field-meta.xml
<CustomField>
    <fullName>Printing_Format__c</fullName>
    <label>Printing Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thermal</fullName>
            </value>
            <value>
                <fullName>DINA-4</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>