unpackaged/main/default/objects/POS_Solution__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <label>Proposed Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solutions</valueSetName>
    </valueSet>
</CustomField>