unpackaged/main/default/objects/POS_Solution__c/fields/Proposed_Solution_Store__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution_Store__c</fullName>
    <formula>TEXT(Account__r.Proposed_Solution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Solution Store</label>
    <type>Text</type>
</CustomField>