unpackaged/main/default/objects/POS_Solution__c/fields/PSP1__c.field-meta.xml
<CustomField>
    <fullName>PSP1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Solutions (PSP)</relationshipLabel>
    <relationshipName>POS_Solutions2</relationshipName>
    <type>Lookup</type>
</CustomField>