unpackaged/main/default/objects/POS_Solution__c/fields/PSP_Text__c.field-meta.xml
<CustomField>
    <fullName>PSP_Text__c</fullName>
    <label>PSP Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consorzio Triveneto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>