unpackaged/main/default/objects/POS_Solution__c/fields/PTS_Application_Version__c.field-meta.xml
<CustomField>
    <fullName>PTS_Application_Version__c</fullName>
    <label>PTS Application Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>