unpackaged/main/default/objects/POS_Solution__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <formula>Account__r.Reference_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference ID</label>
    <type>Text</type>
</CustomField>