unpackaged/main/default/objects/POS_Solution__c/fields/Reference_or_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_or_Account_ID__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.Reference_ID__c)), Account__r.Reference_ID__c,  TRS_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference or Account ID</label>
    <type>Text</type>
</CustomField>