unpackaged/main/default/objects/POS_Solution__c/fields/Refund_Method_Obligatory__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method_Obligatory__c</fullName>
    <label>Refund Method Obligatory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>