unpackaged/main/default/objects/POS_Solution__c/fields/Removal_Requested__c.field-meta.xml
<CustomField>
    <fullName>Removal_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removal Requested</label>
    <type>Checkbox</type>
</CustomField>