unpackaged/main/default/objects/POS_Solution__c/fields/Return_Description__c.field-meta.xml
<CustomField>
    <fullName>Return_Description__c</fullName>
    <formula>&quot;PDQ&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Description</label>
    <type>Text</type>
</CustomField>