unpackaged/main/default/objects/POS_Solution__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <formula>&quot;Print Return Label&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Type</label>
    <type>Text</type>
</CustomField>