unpackaged/main/default/objects/POS_Solution__c/fields/Rolled_Out__c.field-meta.xml
<CustomField>
    <fullName>Rolled_Out__c</fullName>
    <label>Rolled Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>