unpackaged/main/default/objects/POS_Solution__c/fields/Rollout_Complete__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Complete__c</fullName>
    <formula>IF(AND(TEXT(Rolled_Out__c) = &quot;Yes&quot;, Account__r.Parent_On_Boarding__c = &quot;Yes&quot;), &quot;Yes&quot;,
IF(AND(TEXT(Rolled_Out__c) = &quot;Yes&quot;, Account__r.Parent_On_Boarding__c &lt;&gt; &quot;Yes&quot;), &quot;No&quot;,
IF(TEXT(Rolled_Out__c) = &quot;No&quot;, &quot;No&quot;,
IF(TEXT(Rolled_Out__c) = &quot;&quot;, &quot;&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollout Complete</label>
    <type>Text</type>
</CustomField>