unpackaged/main/default/objects/POS_Solution__c/fields/Secondary_DNS__c.field-meta.xml
<CustomField>
    <fullName>Secondary_DNS__c</fullName>
    <label>Secondary DNS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>