unpackaged/main/default/objects/POS_Solution__c/fields/Send_Fallback_Online_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Fallback_Online_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Fallback Online Email</label>
    <type>Checkbox</type>
</CustomField>