unpackaged/main/default/objects/POS_Solution__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUTBOUND</fullName>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>