unpackaged/main/default/objects/POS_Solution__c/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Name</label>
    <type>Text</type>
</CustomField>