unpackaged/main/default/objects/POS_Solution__c/fields/Shop_Owner__c.field-meta.xml
<CustomField>
    <fullName>Shop_Owner__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp;  Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Owner</label>
    <type>Text</type>
</CustomField>