unpackaged/main/default/objects/POS_Solution__c/fields/SIM_Card__c.field-meta.xml
<CustomField>
    <fullName>SIM_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIM Card</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>SIM Card</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>POS Solutions (SIM Card)</relationshipLabel>
    <relationshipName>POS_Solutions3</relationshipName>
    <type>Lookup</type>
</CustomField>