unpackaged/main/default/objects/POS_Solution__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solutions</valueSetName>
    </valueSet>
</CustomField>