unpackaged/main/default/objects/POS_Solution__c/fields/Solution_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Delivery_Date__c</fullName>
    <formula>Till_Software_Version__r.Solution_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Delivery Date</label>
    <type>Date</type>
</CustomField>