unpackaged/main/default/objects/POS_Solution__c/fields/Solution_Rolled_Out__c.field-meta.xml
<CustomField>
    <fullName>Solution_Rolled_Out__c</fullName>
    <formula>TEXT(Proposed_Solution__c)  &amp; &quot; - &quot; &amp; TEXT(Rolled_Out__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Rolled Out</label>
    <type>Text</type>
</CustomField>