unpackaged/main/default/objects/POS_Solution__c/fields/SS_DS_TRS_only__c.field-meta.xml
<CustomField>
    <fullName>SS_DS_TRS_only__c</fullName>
    <label>SS/DS (TRS only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>SS</fullName>
            </value>
            <value>
                <fullName>BBVA/POL</fullName>
            </value>
            <value>
                <fullName>POL/PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>