unpackaged/main/default/objects/POS_Solution__c/fields/Static_IP__c.field-meta.xml
<CustomField>
    <fullName>Static_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Static IP</label>
    <type>Checkbox</type>
</CustomField>