unpackaged/main/default/objects/POS_Solution__c/fields/Store_Deployment_Cost_est__c.field-meta.xml
<CustomField>
    <fullName>Store_Deployment_Cost_est__c</fullName>
    <label>Store Deployment Cost (est)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>