unpackaged/main/default/objects/POS_Solution__c/fields/Store_Deployment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Store_Deployment_Lead__c</fullName>
    <label>Store Deployment Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consorzio Triveneto</fullName>
            </value>
            <value>
                <fullName>Mercury Payment</fullName>
            </value>
            <value>
                <fullName>POS Support IT</fullName>
            </value>
            <value>
                <fullName>Sales Support IT</fullName>
            </value>
            <value>
                <fullName>Consorzio Triveneto Uff POS</fullName>
            </value>
            <value>
                <fullName>Sales Support MI</fullName>
            </value>
            <value>
                <fullName>Sales Support RM</fullName>
            </value>
            <value>
                <fullName>Sales Support VE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>