unpackaged/main/default/objects/POS_Solution__c/fields/Subnet__c.field-meta.xml
<CustomField>
    <fullName>Subnet__c</fullName>
    <label>Subnet</label>
    <length>128</length>
    <type>Text</type>
</CustomField>