unpackaged/main/default/objects/POS_Solution__c/fields/Tax_Free_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Form_Type__c</fullName>
    <label>Tax Free Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A4 FULL BLANK</fullName>
            </value>
            <value>
                <fullName>PA IMPACT Forms (3 copies)</fullName>
            </value>
            <value>
                <fullName>PA IMPACT Forms (4 copies)</fullName>
            </value>
            <value>
                <fullName>PREPRINTED</fullName>
            </value>
            <value>
                <fullName>SW3B Forms New</fullName>
            </value>
            <value>
                <fullName>SW3B Forms Old</fullName>
            </value>
            <value>
                <fullName>SW3P Forms</fullName>
            </value>
            <value>
                <fullName>T40 Rolls</fullName>
            </value>
            <value>
                <fullName>T80 Rolls</fullName>
            </value>
            <value>
                <fullName>T80 Rolls (with logo)</fullName>
            </value>
            <value>
                <fullName>Valentino SW3P Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>