unpackaged/main/default/objects/POS_Solution__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terminal_Type</valueSetName>
    </valueSet>
</CustomField>