unpackaged/main/default/objects/POS_Solution__c/fields/Terminal_ID_TID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID_TID__c</fullName>
    <description>Label: Terminal ID (TID) &gt; ITID (28/01/2022)</description>
    <label>ITID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>