unpackaged/main/default/objects/POS_Solution__c/fields/TF_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>TF_Current_Provider__c</fullName>
    <formula>IF(INCLUDES(Account__r.TF_Current_Provider__c,&quot;Caixa&quot;), &quot;Caixa&quot;,
IF(INCLUDES(Account__r.TF_Current_Provider__c,&quot;Premier Tax Free&quot;), &quot;Premier Tax Free&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Current Provider</label>
    <type>Text</type>
</CustomField>