unpackaged/main/default/objects/POS_Solution__c/fields/Threshold_50_01__c.field-meta.xml
<CustomField>
    <fullName>Threshold_50_01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Threshold 50,01</label>
    <type>Checkbox</type>
</CustomField>