unpackaged/main/default/objects/POS_Solution__c/fields/TID_Type__c.field-meta.xml
<CustomField>
    <fullName>TID_Type__c</fullName>
    <label>TID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alipay</fullName>
            </value>
            <value>
                <fullName>AX Integrated</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>BMS + DCC</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Planet</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>WeChat Pay</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>