unpackaged/main/default/objects/POS_Solution__c/fields/Till_Number__c.field-meta.xml
<CustomField>
    <fullName>Till_Number__c</fullName>
    <label>Till Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>