unpackaged/main/default/objects/POS_Solution__c/fields/Till_Software__c.field-meta.xml
<CustomField>
    <fullName>Till_Software__c</fullName>
    <formula>Till_Software_Version__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Till Software</label>
    <type>Text</type>
</CustomField>