unpackaged/main/default/objects/POS_Solution__c/fields/Till_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Till_Software_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Till Software Version</label>
    <referenceTo>Tech_Spec__c</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>