unpackaged/main/default/objects/POS_Solution__c/fields/Till_System__c.field-meta.xml
<CustomField>
    <fullName>Till_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Till System</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions1</relationshipName>
    <type>Lookup</type>
</CustomField>