unpackaged/main/default/objects/POS_Solution__c/fields/TMS_TID__c.field-meta.xml
<CustomField>
    <fullName>TMS_TID__c</fullName>
    <description>Label: TMS TID &gt; Bank Terminal ID (28/01/2022)</description>
    <label>Bank Terminal ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>