unpackaged/main/default/objects/POS_Solution__c/fields/TRS_ID__c.field-meta.xml
<CustomField>
    <fullName>TRS_ID__c</fullName>
    <formula>RIGHT(Account__r.Account_ID__c, 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRS ID</label>
    <type>Text</type>
</CustomField>