unpackaged/main/default/objects/POS_Solution__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminal Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>