unpackaged/main/default/objects/POS_Solution__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
                <isActive>false</isActive>
                <label>Deployed</label>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Faulty Stock</fullName>
            </value>
            <value>
                <fullName>In Repair</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
                <isActive>false</isActive>
                <label>Installed</label>
            </value>
            <value>
                <fullName>In Stock</fullName>
                <isActive>false</isActive>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
                <isActive>false</isActive>
                <label>RMA</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <isActive>false</isActive>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <isActive>false</isActive>
                <label>Suspended</label>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>