unpackaged/main/default/objects/POS_Solution__c/fields/Update_Required__c.field-meta.xml
<CustomField>
    <fullName>Update_Required__c</fullName>
    <label>Update Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual/Replacement</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>