unpackaged/main/default/objects/POS_Solution__c/fields/UPS_Outbound_Shipping__c.field-meta.xml
<CustomField>
    <fullName>UPS_Outbound_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UPS Outbound Shipping</label>
    <type>Checkbox</type>
</CustomField>