unpackaged/main/default/objects/POS_Solution__c/fields/UPS_Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>UPS_Packaging_Type__c</fullName>
    <formula>&quot;UPS_YOUR_PACKAGING&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UPS Packaging Type</label>
    <type>Text</type>
</CustomField>