unpackaged/main/default/objects/POS_Solution__c/fields/Use_Fiscal_Number__c.field-meta.xml
<CustomField>
    <fullName>Use_Fiscal_Number__c</fullName>
    <formula>Till_System__r.Use_Fiscal_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Fiscal Number</label>
    <type>Checkbox</type>
</CustomField>