unpackaged/main/default/objects/POS_Solution__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <formula>Account__r.VAT_Reg_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Number</label>
    <type>Text</type>
</CustomField>