unpackaged/main/default/objects/POS_Solution__c/fields/Web_Services__c.field-meta.xml
<CustomField>
    <fullName>Web_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Services</label>
    <type>Checkbox</type>
</CustomField>