unpackaged/main/default/objects/POS_Solution__c/fields/Wechat__c.field-meta.xml
<CustomField>
    <fullName>Wechat__c</fullName>
    <label>Wechat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>