unpackaged/main/default/objects/POS_Solution__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>