unpackaged/main/default/objects/POS_Solution__c/fields/X3C_Instance_TID__c.field-meta.xml
<CustomField>
    <fullName>X3C_Instance_TID__c</fullName>
    <description>Label: 3C Instance TID &gt; Instance Number (28/01/2022)</description>
    <label>Instance Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>