unpackaged/main/default/objects/POS_Solution__c/fields/X3rd_Party_Dev_Cost_Est__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Dev_Cost_Est__c</fullName>
    <formula>Till_Software_Version__r.X3rd_Party_Dev_Cost_Est__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Dev Cost Est</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>