unpackaged/main/default/objects/POS_Solution__c/validationRules/Base_Station.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Station</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Terminal__c) &lt;&gt; &quot;Vx680 3G&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;Vx680 BT/Wi-fi&quot;, 
TEXT(Terminal__c) &lt;&gt; &quot;Vx520&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;Vx670&quot;, 
TEXT(Terminal__c) &lt;&gt; &quot;A920&quot;, 
TEXT(Terminal__c) &lt;&gt; &quot;Vx690&quot;, 
TEXT(Terminal__c) &lt;&gt; &quot;Vx810&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;IWL220&quot;, 
TEXT(Terminal__c) &lt;&gt; &quot;IWL250&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;i7780&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;Pax A920 - Black (1GB)&quot;,
TEXT(Terminal__c) &lt;&gt; &quot;Not Required&quot;,
TEXT(Base_Station__c) &lt;&gt; &quot;Not Required&quot;,
NOT( ISNULL (Base_Station_Unit__c )))</errorConditionFormula>
    <errorDisplayField>Base_Station__c</errorDisplayField>
    <errorMessage>This terminal type does not require a Base Station.</errorMessage>
</ValidationRule>