unpackaged/main/default/objects/POS_Solution__c/validationRules/Base_Station_Match2.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Station_Match2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Base_Station__c) = &quot;iWL220-250 Base Station&quot;,
NOT(CONTAINS(TEXT(Terminal__c), &quot;IWL&quot;)))</errorConditionFormula>
    <errorDisplayField>Base_Station__c</errorDisplayField>
    <errorMessage>Terminal and Base Stations do not match.</errorMessage>
</ValidationRule>